[tool.poetry]
name = "etl-downloader"
version = "0.1.0"
description = "ETL downloader from SQLite to Elastic"
authors = ["Дмитрий Д. Карманов <karmanovdd@yamoney.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
